--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -11,32 +11,37 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/css/mdb.min.css" rel="stylesheet">
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
 <body style="background-color:#ededed">
 <style>
 
 </style>
 <nav style="margin-bottom: 40px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <!--<ul class="navbar-nav">-->
-    <h4 style="margin-bottom:-4px" class="navbar-brand">INTERNAL PROXY</h4>
-    <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
-    <a class="btn btn-primary" href="#" th:href="@{/edit}" th:classappend="${entries.empty} ? 'disabled' : ''"> Edit
-        Entries </a>
-    <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a>
-
-    <th:block th:text="${appVersion}"></th:block>
-    <!--</ul>-->
+    <ul class="navbar-nav" style="float:left">
+        <h4 style="margin-top:10px" class="navbar-brand">INTERNAL PROXY</h4>
+        <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
+        <a class="btn btn-primary" href="#" th:href="@{/edit}" th:classappend="${entries.empty} ? 'disabled' : ''"> Edit
+            Entries </a>
+        <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a>
+    </ul>
+    <div class="collapse navbar-collapse justify-content-end">
+        <ul class="navbar-verison justify-content-end" style="float:right !important">
+            <h3 style="color:white; margin-bottom:-15px; font-size: 20" th:text="${'Ver: ' + appVersion}">??</h3>
+        </ul>
+    </div>
 </nav>
-<div class="container" style="margin-left: 40px">
+<div class="container" style="margin-left: 40px; width: 100%">
     <div class="row">
         <div class="col-md-12">
             <h1> Mocked Services </h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 ">
             <table class="table table-striped">
                 <thead>
                 <th> isMocked</th>
@@ -67,10 +72,11 @@
                     <td><span th:text="${entries[__${entry.key}__].realUrl}"> Route </span></td>
                     <td>
                         <button type="button" class="btn btn-primary" data-toggle="modal"
-                                th:data-target="${'#exampleModal' + entry.key}">View</button>
+                                th:data-target="${'#exampleModal' + entry.key}">View
+                        </button>
                     </td>
                     <td>
-                   <span th:text="${entries[__${entry.key}__].status}"> Status </span>
+                        <span th:text="${entries[__${entry.key}__].status}"> Status </span>
                     </td>
 
                     <div class="modal right fade" th:id="${'exampleModal' + entry.key}" tabindex="-1" role="dialog"
@@ -78,7 +84,8 @@
                         <div class="modal-dialog modal-full-height modal-right" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel" th:text="${entries[__${entry.key}__].name}"></h5>
+                                    <h5 class="modal-title" id="exampleModalLabel"
+                                        th:text="${entries[__${entry.key}__].name}"></h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -87,13 +94,15 @@
                                     <form>
                                         <div class="form-group">
                                             <label for="message-text" class="col-form-label">Mock Response:</label>
-                                            <textarea readonly rows="40" th:text="${entries[__${entry.key}__].mock}" class="form-control" id="message-text"></textarea>
+                                            <textarea readonly rows="40" th:text="${entries[__${entry.key}__].mock}"
+                                                      class="form-control" id="message-text"></textarea>
                                         </div>
                                     </form>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-primary" data-dismiss="modal">
-                                        Close</button>
+                                        Close
+                                    </button>
                                 </div>
                             </div>
                         </div>
