--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,27 +18,46 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.15/js/mdb.min.js"></script>
 <body style="background-color:#ededed">
 <style>
-table th {
-  font-size: 20px;
-}
-table td {
-  font-size: 19px;
-}
+    table th {
+        font-size: 20px;
+    }
+
+    table td {
+        font-size: 19px;
+    }
 
 </style>
 <nav style="margin-bottom: 40px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav" style="float:left">
         <h4 style="margin-top:10px" class="navbar-brand">INTERNAL PROXY</h4>
-        <a class="btn btn-success" href="#" th:href="@{/create}"> Add Entries </a>
-        <a class="btn btn-primary" href="#" th:href="@{/edit}" th:classappend="${entries.empty} ? 'disabled' : ''"> Edit
-            Entries </a>
-        <a class="btn btn-warning" href="#" th:href="@{/clear}"> Clear All </a>
-        <a class="btn btn-info" href="#" th:href="@{/upload}"> Import Profile </a>
-        <a class="btn btn-danger" href="#" th:href="@{/export}"> Export Profile </a>
+        <a class="btn btn-success" href="#" th:href="@{/create}">
+            <span class="fa fa-plus-circle" aria-hidden="true"></span> Add </a>
+        <a class="btn btn-primary" href="#" th:href="@{/edit}" th:classappend="${entries.empty} ? 'disabled' : ''">
+            <span class="fa fa-pencil-square-o" aria-hidden="true"></span> Edit </a>
+        <a class="btn btn-warning" href="#" th:href="@{/clear}" th:classappend="${entries.empty} ? 'disabled' : ''">
+            <span class="fa fa-recycle" aria-hidden="true"></span> Clear </a>
+        <a class="btn btn-info" href="#" th:href="@{/upload}">
+            <span class="fa fa-upload" aria-hidden="true"></span> Import </a>
+        <a class="btn btn-danger" href="#" th:href="@{/export}">
+            <span class="fa fa-download" aria-hidden="true"></span> Export </a>
     </ul>
     <div class="collapse navbar-collapse justify-content-end">
+        <ul class="nav navbar-nav navbar-right">
+            <li th:if="${#authorization.expression('!isAuthenticated()')}">
+                <a href="/login" th:href="@{/login}" class="btn btn-default btn-sm">
+                    <span class="fa fa-sign-in fa-2x" aria-hidden="true"></span>
+                </a>
+            </li>
+            <li th:if="${#authorization.expression('isAuthenticated()')}">
+                <a href="/logout" th:href="@{#}" onclick="$('#form').submit();" class="btn btn-default btn-sm">
+                    <span class="fa fa-sign-out fa-2x" aria-hidden="true"></span>
+                </a>
+                <form style="visibility: hidden; display: none;" id="form" method="post" action="#"
+                      th:action="@{/logout}"></form>
+            </li>
+        </ul>
         <ul class="navbar-verison justify-content-end" style="float:right !important">
-            <h3 style="color:white; margin-bottom:-15px; font-size: 20" th:text="${'Ver: ' + appVersion}">??</h3>
+            <h3 style="color:white; margin-bottom:-15px; font-size: 20" th:text="${'Ver: Unknown' + appVersion}">??</h3>
         </ul>
     </div>
 </nav>
@@ -48,9 +67,9 @@ table td {
             <h1> Mocked Services </h1>
         </div>
     </div>
-    <div class="row">
+    <div layout:fragment="content" class="row">
         <div class="col-md-6 " style="width: 100%">
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-bordered">
                 <thead class="thead-dark">
                 <th> isMocked</th>
                 <th> ServiceName</th>
@@ -82,7 +101,8 @@ table td {
                     <td><span th:text="${entries[__${entry.key}__].realUrl}"> Route </span></td>
                     <td>
                         <button type="button" class="btn btn-primary" data-toggle="modal"
-                                th:data-target="${'#exampleModal' + entry.key}">View
+                                th:data-target="${'#exampleModal' + entry.key}">
+                            <span class="fa fa-eye" aria-hidden="true"></span> View
                         </button>
                     </td>
                     <td>
