--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -57,19 +57,19 @@
             </li>
         </ul>
         <ul class="navbar-verison justify-content-end" style="float:right !important">
-            <h3 style="color:white; margin-bottom:-15px; font-size: 20" th:text="${'Ver: Unknown' + appVersion}">??</h3>
+            <h3 style="color:white; margin-bottom:-15px; font-size: 20" th:text="${'Ver: ' + appVersion}">??</h3>
         </ul>
     </div>
 </nav>
-<div class="container" style="margin-left: 40px; width: 100%">
+<div class="container-fluid" style="margin-left: 40px; width: 100%">
     <div class="row">
         <div class="col-md-12">
             <h1> Mocked Services </h1>
         </div>
     </div>
     <div layout:fragment="content" class="row">
-        <div class="col-md-6 " style="width: 100%">
-            <table class="table table-striped table-bordered">
+        <div class="col-lg-12 " style="width: 100%">
+            <table class="table table-striped table-responsive" style="width: 100%">
                 <thead class="thead-dark">
                 <th> isMocked</th>
                 <th> ServiceName</th>
