--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -61,14 +61,14 @@
         </ul>
     </div>
 </nav>
-<div class="container-fluid" style="margin-left: 40px; width: 100%">
+<div class="container" style="margin-left: 40px; width: 100%">
     <div class="row">
         <div class="col-md-12">
             <h1> Mocked Services </h1>
         </div>
     </div>
     <div layout:fragment="content" class="row">
-        <div class="col-lg-12 " style="width: 100%">
+        <div class="col-xl-auto ">
             <table class="table table-striped table-responsive" style="width: 100%">
                 <thead class="thead-dark">
                 <th> isMocked</th>
@@ -148,6 +148,9 @@
                 </tbody>
             </table>
         </div>
+
+    </div>
+    <div th:replace="fragments/footer">
 
     </div>
 </div>
