--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -44,12 +44,12 @@
     <div class="collapse navbar-collapse justify-content-end">
         <ul class="nav navbar-nav navbar-right">
             <li th:if="${#authorization.expression('!isAuthenticated()')}">
-                <a href="/login" th:href="@{/login}" class="btn btn-default btn-sm">
+                <a href="/login" th:href="@{/login}" class="btn btn-light btn-sm">
                     <span class="fa fa-sign-in fa-2x" aria-hidden="true"></span>
                 </a>
             </li>
             <li th:if="${#authorization.expression('isAuthenticated()')}">
-                <a href="/logout" th:href="@{#}" onclick="$('#form').submit();" class="btn btn-default btn-sm">
+                <a href="/logout" th:href="@{#}" onclick="$('#form').submit();" class="btn btn-light btn-sm">
                     <span class="fa fa-sign-out fa-2x" aria-hidden="true"></span>
                 </a>
                 <form style="visibility: hidden; display: none;" id="form" method="post" action="#"
