--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -26,6 +26,9 @@
         font-size: 19px;
     }
 
+
+
+
 </style>
 <nav style="margin-bottom: 40px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav" style="float:left">
@@ -61,97 +64,100 @@
         </ul>
     </div>
 </nav>
-<div class="container" style="margin-left: 40px; width: 100%">
-    <div class="row">
-        <div class="col-md-12">
-            <h1> Mocked Services </h1>
-        </div>
-    </div>
-    <div layout:fragment="content" class="row">
-        <div class="col-xl-auto ">
-            <table class="table table-striped table-responsive" style="width: 100%">
-                <thead class="thead-dark">
-                <th> isMocked</th>
-                <th> ServiceName</th>
-                <th> Route</th>
-                <th> MockResponse</th>
-                <th> Status</th>
-                <th> CallCount</th>
-                <th> ProxyUrl</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:if="${entries.empty}">
-                    <td colspan="2"> No Services Available, go add some!</td>
-                </tr>
+<div class="row" style="margin-left: 40px">
+    <div class="col-md-auto">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <!-- Grid column -->
+                    <div class="col-lg-12">
+                        <h2 class="py-3 font-bold font-up black-text">Mocked Services</h2>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <table class="table table-hover table-responsive mb-2">
+                    <thead>
+                    <th class="th-lg"> isMocked</th>
+                    <th class="th-lg"> ServiceName</th>
+                    <th class="th-lg"> Route</th>
+                    <th class="th-lg"> MockResponse</th>
+                    <th class="th-lg"> Status</th>
+                    <th class="th-lg"> CallCount</th>
+                    <th class="th-lg"> ProxyUrl</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:if="${entries.empty}">
+                        <td colspan="2"> No Services Available, go add some!</td>
+                    </tr>
 
-                <tr th:each="entry : ${entries}">
-                    <td>
+                    <tr th:each="entry : ${entries}">
+                        <td>
                         <span th:if="${entries[__${entry.key}__].mocked}" style="color:green">
                              <i class="fa fa-cog fa-spin" style="font-size:24px"> </i>
                             Mocked
                         </span>
-                        <span th:if="${!entries[__${entry.key}__].mocked}" style="color:red">
+                            <span th:if="${!entries[__${entry.key}__].mocked}" style="color:red">
                              <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
                             Forwarding
                         </span>
-                    </td>
+                        </td>
 
-                    <td><span th:text="${entry.key}"> ServiceName </span></td>
-                    <td><span th:text="${entries[__${entry.key}__].realUrl}"> Route </span></td>
-                    <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal"
-                                th:data-target="${'#exampleModal' + entry.key}">
-                            <span class="fa fa-eye" aria-hidden="true"></span> View
-                        </button>
-                    </td>
-                    <td>
-                        <span th:text="${entries[__${entry.key}__].status}"> Status </span>
-                    </td>
-                    <td>
-                        <span th:text="${entries[__${entry.key}__].callCount}"> CallCount </span>
-                    </td>
+                        <td><span th:text="${entry.key}"> ServiceName </span></td>
+                        <td><span th:text="${entries[__${entry.key}__].realUrl}"> Route </span></td>
+                        <td>
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    th:data-target="${'#exampleModal' + entry.key}">
+                                <span class="fa fa-eye" aria-hidden="true"></span> View
+                            </button>
+                        </td>
+                        <td>
+                            <span th:text="${entries[__${entry.key}__].status}"> Status </span>
+                        </td>
+                        <td>
+                            <span th:text="${entries[__${entry.key}__].callCount}"> CallCount </span>
+                        </td>
 
-                    <div class="modal right fade" th:id="${'exampleModal' + entry.key}" tabindex="-1" role="dialog"
-                         aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-full-height modal-right" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel"
-                                        th:text="${entries[__${entry.key}__].name}"></h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <form>
-                                        <div class="form-group">
-                                            <label for="message-text" class="col-form-label">Mock Response:</label>
-                                            <textarea readonly rows="40" th:text="${entries[__${entry.key}__].mock}"
-                                                      class="form-control" id="message-text"></textarea>
-                                        </div>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary" data-dismiss="modal">
-                                        Close
-                                    </button>
+                        <div class="modal right fade" th:id="${'exampleModal' + entry.key}" tabindex="-1" role="dialog"
+                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-full-height modal-right" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel"
+                                            th:text="${entries[__${entry.key}__].name}"></h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="message-text" class="col-form-label">Mock Response:</label>
+                                                <textarea readonly rows="40" th:text="${entries[__${entry.key}__].mock}"
+                                                          class="form-control" id="message-text"></textarea>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-primary" data-dismiss="modal">
+                                            Close
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <td>
-                        <span th:text="${#strings.replace(#request.requestURL, '/all', '') + '/proxy/call/' + entry.key}"> ProxyUrl </span>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+                        <td>
+                            <span th:text="${#strings.replace(#request.requestURL, '/all', '') + '/proxy/call/' + entry.key}"> ProxyUrl </span>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
-
-    </div>
-    <div th:replace="fragments/footer">
-
+        <div th:replace="fragments/footer">
+        </div>
     </div>
 </div>
 </body>
