--- a/src/main/resources/templates/entries/allEntries.html
+++ b/src/main/resources/templates/entries/allEntries.html
@@ -26,9 +26,6 @@
         font-size: 19px;
     }
 
-
-
-
 </style>
 <nav style="margin-bottom: 40px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav" style="float:left">
@@ -64,14 +61,14 @@
         </ul>
     </div>
 </nav>
-<div class="row" style="margin-left: 40px">
+<div class="row justify-content-center" >
     <div class="col-md-auto">
         <div class="card">
             <div class="card-body">
                 <div class="row">
                     <!-- Grid column -->
-                    <div class="col-lg-12">
-                        <h2 class="py-3 font-bold font-up black-text">Mocked Services</h2>
+                    <div class="col-md-6">
+                        <h2 class="card-title">Mocked Services</h2>
                     </div>
                     <!-- Grid column -->
                 </div>
@@ -156,8 +153,7 @@
             </div>
 
         </div>
-        <div th:replace="fragments/footer">
-        </div>
+        <div th:replace="fragments/footer"></div>
     </div>
 </div>
 </body>
